syntax = "proto3";
package core.solo.io;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/resources/core";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.equal_all) = true;

// A way to reference resources across namespaces
message ResourceRef {
    string name = 1;
    string namespace = 2;
}